Mon Apr 25 21:31:36 2011  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

	* ext/openssl/extconf.rb: Should check SSLv2_*method.
	  openssl compiled with "no-ssl2" the extconf don't fail
	  when running `make' having this compilation errors.
	  Patched by Laurent Arnoud. fixes #4562, #4556

Mon Apr 25 20:53:32 2011  Tajima, Akio <artonx@yahoo.co.jp>

	* win32/win32.c (kill): accept 0 only sig is SIGINT #4596

Mon Apr 25 19:59:47 2011  Tajima, Akio <artonx@yahoo.co.jp>

	* win32/win32.c (kill): accept 0 as pid, fixes #4596

Mon Apr 25 19:59:47 2011  Tajima, Akio <artonx@yahoo.co.jp>

	* win32/win32.c (kill): accept 0 as pid, fixes #4596

Fri Apr 22 11:49:49 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/xmlrpc/create.rb (XMLRPC::Create#conv2value):
	  XML-RPC's int is 32bit int, and Fixnum also may be beyond 32bit.

Fri Apr 22 04:16:14 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): strings from psych have proper taint
	  markings.

	* test/psych/test_tainted.rb: test for string taint

Thu Apr 21 01:01:28 2011  Masaya Tarui  <tarui@ruby-lang.org>

	* win32/win32.c (CreateChild): maximum length of lpCommandLine is
	  32,768 characters, including the Unicode terminating null character.
	
Sat Oct  9 16:54:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RSHIFT): quote to get rid of argument expansion
	  for autoconf 2.68.

Wed Apr 20 14:41:28 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_each_line): check string's length when compare
	  separator and string. [ruby-core:35815] fixes #4586

Mon Apr 18 12:15:46 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_range.rb (TestRange#test_step_ruby_core_35753):
	  avoid float error. [ruby-core:35804]

Fri Apr 15 15:10:29 2011  Akinori MUSHA  <knu@iDaemons.org>

	* lib/uri/generic.rb (#route_from_path): Fix a bug where
	  URI('http://h/b/').route_to('http://h/b') wrongly returned './'
	  (should be '../b'). [Bug #4476]
